Service Layer, Repository pattern, Observer pattern, Unit/Feature tests, Swagger docs refact: screen of tests
