# app/Http/Controllers/Api/V1/booking/AssetController.php
@@ -2,17 +2,23 @@
 
 namespace App\Http\Controllers\Api\V1\booking;
 
-use App\Http\Controllers\Controller;
+use App\Modules\Base\Resources\ErrorResource;
 use Illuminate\Http\Request;
-use Illuminate\Http\JsonResponse;
-use App\Modules\Asset\Models\Asset;
-use App\Modules\Base\Resources\SuccessResource;
+use Symfony\Component\HttpFoundation\Response;
+use App\Http\Controllers\Controller;
 use App\Modules\Asset\Requests\AssetStoreRequest;
-use App\Modules\Asset\Resources\AssetCollection;
-
+use App\Modules\Asset\Resources\AssetResource;
+use App\Modules\Asset\Services\AssetService;
+use App\Modules\Asset\Repositories\AssetRepository;
 
 class AssetController extends Controller
 {
+    public function __construct(
+        private readonly AssetRepository $bookingRepository,
+        private readonly AssetService $bookingService,
+    ) {
+    }
+
     /**
      * @OA\Get(
      *     path="/api/v1/resources",
@@ -31,8 +37,7 @@ class AssetController extends Controller
      */
     public function index()
     {
-        $assets = Asset::all();
-        return new AssetCollection($assets);
+        return AssetResource::collection($this->bookingRepository->getAll());
     }
 
     /**
@@ -49,18 +54,32 @@ class AssetController extends Controller
      *     @OA\Response(
      *         response="201",
      *         description="Created",
-     *         @OA\JsonContent(ref="#/components/schemas/SuccessResponse"),
+     *         @OA\JsonContent(ref="#/components/schemas/Asset"))
      *     ),
      *     @OA\Response(
-     *         response="400",
+     *         response="400, 422",
      *         description="Error",
      *     ),
      * )
      */
-    public function store(AssetStoreRequest $request): SuccessResource
+    public function store(AssetStoreRequest $request)
     {
-        $asset = Asset::create($$request->validated());
-        return new SuccessResource($asset, 201);
+        try {
+            return AssetResource::make($this->bookingService->createAsset(
+                $request->name,
+                $request->type,
+                $request->description,
+            ));
+        } catch (\Illuminate\Validation\ValidationException $e) {
+            $msg = 'Ошибка при создании ресурса: ' . $e->getMessage();
+            \Log::error($msg);
+            return ErrorResource::make(code: $e->getCode() >= 100 && $e->getCode() < 600 ? $e->getCode() : Response::HTTP_UNPROCESSABLE_ENTITY, message: $msg);
+        } catch (\Exception $e) {
+            \Log::error('Ошибка при создании ресурса: ' . $e->getMessage());
+            $msg = 'Ошибка при создании ресурса: ' . $e->getMessage();
+            \Log::error($msg);
+            return ErrorResource::make(code: $e->getCode() >= 100 && $e->getCode() < 600 ? $e->getCode() : Response::HTTP_INTERNAL_SERVER_ERROR, message: $msg);
+        }
     }
 
     /**
@@ -69,5 +88,16 @@ class AssetController extends Controller
     public function update(Request $request, string $id)
     {
         //
+    }
+
+    public function destroy($request)
+    {
+        try {
+            $this->bookingService->deleteAsset($request->id);
+            return response()->noContent();
+        } catch (\Illuminate\Database\Eloquent\ModelNotFoundException $e) {
+            \Log::error('Ошибка при удалении ресурса: ' . $e->getMessage());
+            return ErrorResource::make(code: Response::HTTP_NOT_FOUND, message: 'Ресурс по указанному ID не найден: ' . $e->getMessage());
+        }
     }
 }
