# app/Http/Controllers/Api/V1/booking/BookingController.php
@@ -2,26 +2,28 @@
 
 namespace App\Http\Controllers\Api\V1\booking;
 
-use App\Modules\Base\Resources\SuccessResource;
 use App\Http\Controllers\Controller;
-use App\Modules\Booking\Models\Booking;
+use App\Modules\Base\Resources\ErrorResource;
 use App\Modules\Booking\Requests\AssetBookingsRequest;
 use App\Modules\Booking\Requests\BookingStoreRequest;
 use App\Modules\Booking\Requests\DeleteBookingRequest;
-use App\Modules\Booking\Resources\BookingCollection;
-use App\Modules\Asset\Models\Asset;
-
+use App\Modules\Booking\Resources\BookingResource;
+use App\Modules\Booking\Services\BookingService;
+use App\Modules\Booking\Repositories\BookingRepository;
 use Illuminate\Http\Request;
-use Illuminate\Http\JsonResponse;
-use Illuminate\Validation\ValidationException;
-
+use Symfony\Component\HttpFoundation\Response;
 
 class BookingController extends Controller
 {
+    public function __construct(
+        private readonly BookingRepository $bookingRepository,
+        private readonly BookingService $bookingService,
+    ) {
+    }
+
     public function index()
     {
-        $bookings = Booking::all();
-        return new BookingCollection($bookings);
+        return BookingResource::collection($this->bookingRepository->getAll());
     }
 
     /**
@@ -38,18 +40,36 @@ class BookingController extends Controller
      *     @OA\Response(
      *         response="201",
      *         description="Created",
-     *         @OA\JsonContent(ref="#/components/schemas/SuccessResponse"),
+     *         @OA\JsonContent(ref="#/components/schemas/Booking")
      *     ),
      *     @OA\Response(
-     *         response="400",
+     *         response="400, 422",
      *         description="Error",
      *     ),
      * )
      */
     public function store(BookingStoreRequest $request)
     {
-        $booking = Booking::create($request->validated());
-        return new SuccessResource($booking, 201);
+        try {
+            return BookingResource::make($this->bookingService->createBooking(
+                $request->asset_id,
+                $request->user_id,
+                $request->start_time,
+                $request->end_time
+            ));
+        } catch (\Illuminate\Validation\ValidationException $e) {
+            $msg = 'Ошибка при создании ресурса: ' . $e->getMessage();
+            \Log::error($msg);
+            return ErrorResource::make(
+                code: $e->getCode() >= 100 && $e->getCode() < 600 ? $e->getCode() : Response::HTTP_UNPROCESSABLE_ENTITY,
+                message: $msg,
+                errors: $e->errors()
+            );
+        } catch (\Exception $e) {
+            $msg = 'Ошибка при создании ресурса: ' . $e->getMessage();
+            \Log::error($msg);
+            return ErrorResource::make(code: $e->getCode() >= 100 && $e->getCode() < 600 ? $e->getCode() : Response::HTTP_BAD_REQUEST, message: $msg);
+        }
     }
 
     /**
@@ -79,11 +99,17 @@ class BookingController extends Controller
      */
     public function assetBookings(AssetBookingsRequest $request)
     {
-        $id = $request->validated('id');
-        $asset = Asset::findOrFail($id);
-        $bookings = $asset->bookings;
-
-        return new BookingCollection($bookings);
+        try {
+            return BookingResource::collection($this->bookingRepository->getBookingsByAssetId($request->id));
+        } catch (\Illuminate\Database\Eloquent\ModelNotFoundException $e) {
+            $msg = 'Ошибка при получении бронирований для ресурса: ' . $e->getMessage();
+            \Log::error($msg);
+            return ErrorResource::make(code: Response::HTTP_NOT_FOUND, message: $msg);
+        } catch (\App\Exceptions\ResourceEmptyException $e) {
+            $msg = 'Ошибка при получении бронирований для ресурса: ' . $e->getMessage();
+            \Log::error($msg);
+            return ErrorResource::make(code: Response::HTTP_BAD_REQUEST, message: $e->getMessage());
+        }
     }
 
      /**
@@ -101,9 +127,8 @@ class BookingController extends Controller
      *          @OA\Schema(type="integer")
      *     ),
      *     @OA\Response(
-     *         response="200",
+     *         response="204",
      *         description="Success",
-     *         @OA\JsonContent(ref="#/components/schemas/SuccessResponse"),
      *     ),
      *     @OA\Response(
      *         response="422",
@@ -111,19 +136,25 @@ class BookingController extends Controller
      *     ),
      * )
      */
-    public function destroy(DeleteBookingRequest $request): JsonResponse
+    public function destroy(DeleteBookingRequest $request)
     {
-        $id = $request->validated('id');
-        $booking = Booking::findOrFail($id);
-        $booking->delete();
-        return SuccessResource($booking, 201);
+        try {
+            $this->bookingService->deleteBooking($request->id);
+            return response()->noContent();
+        } catch (\Illuminate\Database\Eloquent\ModelNotFoundException $e) {
+            \Log::error('Ошибка при удалении ресурса: ' . $e->getMessage());
+            return ErrorResource::make(code: Response::HTTP_NOT_FOUND, message: 'Ресурс по указанному ID не найден: ' . $e->getMessage());
+        } catch (\Exception $e) {
+            \Log::error('Ошибка при удалении ресурса: ' . $e->getMessage());
+            return ErrorResource::make(code: $e->getCode() >= 400 ? $e->getCode() : Response::HTTP_INTERNAL_SERVER_ERROR, message: $e->getMessage());
+        }
     }
 
 
     /**
      * Update the specified asset in storage.
      */
-    public function update(Request $request, string $id)
+    public function update(Request $request, string $id): void
     {
         //
     }
