# storage/api-docs/api-docs.json
@@ -60,13 +60,10 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/SuccessResponse"
+                                    "$ref": "#/components/schemas/Asset"
                                 }
                             }
                         }
-                    },
-                    "400": {
-                        "description": "Error"
                     }
                 }
             }
@@ -95,12 +92,12 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/SuccessResponse"
+                                    "$ref": "#/components/schemas/Booking"
                                 }
                             }
                         }
                     },
-                    "400": {
+                    "400, 422": {
                         "description": "Error"
                     }
                 }
@@ -163,15 +160,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/SuccessResponse"
-                                }
-                            }
-                        }
+                    "204": {
+                        "description": "Success"
                     },
                     "422": {
                         "description": "Error"
@@ -305,13 +295,13 @@
                         "description": "start booking time",
                         "type": "string",
                         "format": "date",
-                        "example": "2025-02-22T09:14:48.000000"
+                        "example": "2025-03-08 19:08:50"
                     },
                     "end_time": {
                         "description": "end booking time",
                         "type": "string",
                         "format": "date",
-                        "example": "2025-02-22T09:14:48.000000"
+                        "example": "2025-03-08 19:08:50"
                     }
                 },
                 "type": "object"
@@ -357,6 +347,9 @@
         "responses": {
             "400": {
                 "description": "Bad request"
+            },
+            "400, 422": {
+                "description": "Error"
             }
         }
     },
